[package]
name = "bpptng-grapher"
version = "0.1.0"
edition = "2021"
authors = [
    "Grant Handy <grantshandy@gmail.com>",
    "Breval Ferrari <breee@duck.com>",
]
description = "A simple graphing calculator for sound physicists 🧑‍🔬"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/grantshandy/grapher"
categories = ["gui", "science", "multimedia"]
keywords = ["gui", "graph", "math", "music", "sound"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.28"
egui_plot = "0.28"
exmex = "0.20"
cfg-if = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location", "History"] }
console_error_panic_hook = "0.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "bpptng-grapher.exe"
LegalCopyright = "Copyright © 2022 Grant Handy, Copyright © 2024 Breval Ferrari"
